--- a/sites/all/themes/auge-theme/sass/partials/components/navigation/_header.scss
+++ b/sites/all/themes/auge-theme/sass/partials/components/navigation/_header.scss
@@ -21,7 +21,7 @@
   display: inline-block;
   vertical-align: middle;
   padding: 15px 0;
-  @include media(630px){
+  @include media($second-breakpoint){
     width: 160px;
   }
   img {
@@ -34,11 +34,11 @@
   }
   .header-main-menu-item{
     a{
-      display: inline-block;  //Revisar,
+      display: inline-block;
       vertical-align: top;
     }
   }
-  @include media(680px){
+  @include media($first-breakpoint){
     display:inline-block;
     vertical-align:middle;
     margin-top:37px;
@@ -49,7 +49,7 @@
   padding-left:0;
   margin:0px;
   display: none;
-  @include media(680px){
+  @include media($first-breakpoint){
     display: inline-block;
   }
   .expanded &{
@@ -70,10 +70,10 @@
   .show{
     display: block;
   }
-  @include media(630px){
+  @include media($first-breakpoint){
     margin: 0;
   }
-  @include media(680px) {
+  @include media($first-breakpoint) {
     display:inline-block;
     margin-left:-4px;
     vertical-align:middle;
@@ -94,10 +94,10 @@
     color:$gray;
     font-size: 2rem;
     padding: 5px 0;
-    @include media(630px) {
+    @include media($first-breakpoint) {
       font-size: 1.1rem;
     }
-    @include media(756px) {
+    @include media($second-breakpoint) {
       font-size: 1.4rem;
     }
   }
@@ -151,6 +151,7 @@
 }
 .expanded{
   @include media($tablet){
+    min-width: 80px;
     &:hover{
       .menu{
         display: block;
